add integer checking fucntion

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <title></title>
 </head>
 <body>
+  <div class="container">
+    <form id="userInput">
+      <div class="form-control">
+        <label>Get a conversion!</label>
+        <input type="text" id="initalInput">
+      </div>
+      <button type="submit" name="button">Enter</button>
+    </form>
+  </div>
+  <div id="answerRN">
+    <p>Your number converted to roman numerals is: <span id="finalOutput"></span></p>
+  </div>
 
 </body>
 </html>
